pequena alteração na div do exercicio 22

--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -11,6 +11,7 @@
         }
 
         div.quadrado {
+            display: center;
             display: inline-block;
             border: 2px solid black;
             border-radius: 10px;
