--- a/desafios/s012/projeto-cordel-moderno.html
+++ b/desafios/s012/projeto-cordel-moderno.html
@@ -9,15 +9,18 @@
 </head>
 <body>
     <header>
-        <p id="cabecalho">
-            Cordel Moderno
-        </p>
+
+            <h1> 
+                Cordel Moderno
+
+            </h1>
+
         <p>
-            Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743"  target="_blank" rel="external">Milton Duarte</a>
         </p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado<br>
             Da tal tecnologia<br>
@@ -29,7 +32,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -41,7 +44,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa<br>
             É parte de um endereço<br>
@@ -63,7 +66,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -75,7 +78,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio<br>
             Chegando na mesma hora<br>
@@ -96,5 +99,11 @@
             Deixe que Deus interprete.
         </p>
     </section>
+
+    <footer>
+        <p>
+            Site criado por <a href="https://github.com/maxwelrobson" target="_blank" rel="external">Maxwel Robson</a> para o <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank" rel="external">CursoemVideo</a>
+        </p>
+    </footer>
 </body>
 </html>
