--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -5,11 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+
+        table {
+            width: 400px;
+            height: 200px;
+            border-collapse: collapse;
+        }
+
+        td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .numero {
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
     <table>
-        
+        <tr>
+            <td>A1</td>
+            <td>B1</td>
+            <td class="numero">C1</td>
+        </tr>
+
+        <tr>
+            <td>A2</td>
+            <td class="numero">B2</td>
+            <td>C2</td>
+        </tr>
+
+        <tr>
+            <td  class="numero">A3</td>
+            <td>B3</td>
+            <td>C3</td>
+        </tr>
     </table>
 </body>
 </html>
