--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -9,20 +9,18 @@
 
         table {
             width: 400px;
-            height: 200px;
+            height: 400px;
             border-collapse: collapse;
         }
 
         td {
             border: 1px solid black;
             padding: 8px;
-            text-align: center;
-            vertical-align: middle;
+            text-align: center; /*Alinhamento horizonatl*/
+            vertical-align: top; /*Alinhamento vertical*/
         }
 
-        .numero {
-            background-color: aqua;
-        }
+
     </style>
 </head>
 <body>
@@ -31,19 +29,25 @@
         <tr>
             <td>A1</td>
             <td>B1</td>
-            <td class="numero">C1</td>
+            <td>B3</td>
         </tr>
 
         <tr>
             <td>A2</td>
-            <td class="numero">B2</td>
+            <td>B2</td>
             <td>C2</td>
         </tr>
 
         <tr>
-            <td  class="numero">A3</td>
+            <td>A3</td>
             <td>B3</td>
             <td>C3</td>
+        </tr>
+
+        <tr>
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
         </tr>
     </table>
 </body>
