--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -33,6 +33,10 @@
             padding: 15px;
         }
 
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
+        }
+
        
 
         .num {
