--- a/desafios/d014/desafio-tabela-de-media.html
+++ b/desafios/d014/desafio-tabela-de-media.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <style>
         table {
+            font-family: Arial, Helvetica, sans-serif;
             width: 500px;
             border-collapse: collapse;
         }
@@ -31,23 +32,22 @@
     <table>
         <thead>
             <tr class="cabecalho">
-                <th rowspan="2">Área</th>
-                <th rowspan="2">Disciplinas</th>
-                <th colspan="2">Notas</th>
-                <th rowspan="2">Média</th>
-                
+                <th rowspan="2" scope="col">Área</th>
+                <th rowspan="2" scope="col">Disciplinas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
+                <th rowspan="2" scope="col">Média</th>
             </tr>
 
             <tr class="cabecalho">
-                <th>Nota 1</th>
-                <th>Nota 2</th>
+                <th scope="col">Nota 1</th>
+                <th scope="col">Nota 2</th>
             </tr>
 
         </thead>    
 
             <tbody>
                 <tr>
-                    <th rowspan="4">Exatas</th>
+                    <th rowspan="4" scope="rowgroup">Exatas</th>
                     <td>Matemática</td>
                     <td class="num">0.0</td>
                     <td class="num">0.0</td>
@@ -76,12 +76,12 @@
                 </tr>
 
                 <tr class="cabecalho">
-                    <th colspan="4">Média de Exatas</th>
-                    <th>0.0</th>
+                    <th colspan="4" scope="row">Média de Exatas</th>
+                    <th scope="row">0.0</th>
                 </tr>
 
                 <tr>
-                    <th rowspan="2">Humanas</th>
+                    <th rowspan="2" scope="rowgroup">Humanas</th>
                     <td>História</td>
                     <td class="num">0.0</td>
                     <td class="num">0.0</td>
@@ -96,8 +96,8 @@
                 </tr>
 
                 <tr class="cabecalho">
-                    <th colspan="4">Média de Humanas</th>
-                    <th>0.0</th>
+                    <th colspan="4" scope="row">Média de Humanas</th>
+                    <th scope="row">0.0</th>
                 </tr>
             </tbody>
         
