--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -22,10 +24,23 @@
     </header>
 
     <main>
-        <h2>Testando Media Queries</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptate eaque quia ad dignissimos eius rerum dolorum reiciendis! Culpa, nulla? In ipsum doloribus repudiandae assumenda iure quisquam natus totam ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas dicta eos harum corrupti nisi repudiandae at quam quod, cupiditate corporis eveniet sint ut est provident expedita architecto sapiente non amet.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est saepe, omnis praesentium in beatae dolor totam asperiores qui tempore eveniet ducimus harum voluptatum temporibus enim pariatur rerum? Deserunt, modi asperiores?</p>
+        <article>
+            <h2>Testando Media Queries</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptate eaque quia ad dignissimos eius rerum dolorum reiciendis! Culpa, nulla? In ipsum doloribus repudiandae assumenda iure quisquam natus totam ducimus.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas dicta eos harum corrupti nisi repudiandae at quam quod, cupiditate corporis eveniet sint ut est provident expedita architecto sapiente non amet.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est saepe, omnis praesentium in beatae dolor totam asperiores qui tempore eveniet ducimus harum voluptatum temporibus enim pariatur rerum? Deserunt, modi asperiores?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur, facere ducimus. Possimus, vel? Quia facilis labore quod quae nesciunt magni optio inventore nemo mollitia suscipit fuga accusantium temporibus, sapiente dolores! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium quo velit provident libero asperiores repudiandae alias, eaque perspiciatis maiores, nihil dignissimos, iusto aut? Nobis eum facilis incidunt consequuntur esse eveniet.</p>
     </main>
+
+    <script>
+        function clickMenu() {
+           if (itens.style.display == 'block') {
+               itens.style.display = 'none'
+        } else {
+            itens.style.display = 'block'
+            }
+        }
+    </script>
+
 </body>
 </html>
