--- a/DevMidia/parque-estadual/index.html
+++ b/DevMidia/parque-estadual/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Parque Estadual Ilha Bela</h1>
 
-    <img src="" alt="">
+    <img src="imagens/parque-ilha-bela.jpg" alt="Imagem">
 
     <h2>O lugar ideal pra momentos inesquecíveis</h2>
     
