--- a/DevMidia/Projetos/Página para divulgação de um livro/index.html
+++ b/DevMidia/Projetos/Página para divulgação de um livro/index.html
@@ -5,14 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Era Artificial</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
         <h1>A Era Artificial</h1>
 
-        <img src="" alt="">
+        <img src="imagens/capa-livro.jpg" alt="Capa do livro A Era Artificial">
 
         <h2>Um futuro sombrio a nosso caminho</h2>
+
+        <p>A história em que a inteligência artificial permitiu as robôs se tornarem a espécie dominante do nosso planeta. Uma luta incessante pela sobrevivência humana tem inícios em um cenário catastrófico dominado pela guerra e pelo caos.</p>
+
+        <a href="#">Comprar</a>
+    </div>
+
+    <div class="blocoborda">
+        <h3>Uma história intensa</h3>
+
+        <p><span>Era Artificial - O Tempo Sombrio das Máquinas</span> deixa o leitor apreensivo com algumas situações que ocorrem em um cenário catastrófico tomado pela destruição, E isso o leva a refletir: veremos um dia tão temida singularidade tecnológica?</p>
+    </div>
+
+    <div class="blocoborda">
+        <h3 >Informações sobre o autor</h3>
+
+        <img src="imagens/autor.jpg" alt="Imagem do autor do livro">
+
+        <p>Diego Souza é apaixonado por tecnologia e trabalha com Desenvolvimento Web. Também é um eterno fã de ficção cientifíca e escritor nas horas vagas. Carioca da gema, ama o Rio de Janeiro, cidade onde nasceu.</p>
+    </div>
+
+    <div>
+        <p>O livro <span>A Era Artificial</span> apresenta um cenário apocalíptico no qual os robôs alcançaram sua independência e com isso se tornaram a espécie dominante do planeta. De que forma a humanidade pode enfrentar esse poderoso inimigo?</p>
+
+        <p><span>Esses e mais detalhes podem ser vistos na história de ficção científica que promete fazer você refletir sobre o futuro da humanidasde!</span></p>
+
+        <a href="#">Comprar</a>
     </div>
 </body>
 </html>
