att do exercicio

--- a/DevMidia/exercicios/paradaria plus/index.html
+++ b/DevMidia/exercicios/paradaria plus/index.html
@@ -7,23 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="secao-sobre">
+    <div class="cabecalho">
         <img src="imagens/logo.png" alt="Logo Padaria Plus">
         
-        <a href="#">Sobre</a>
-        <a href="#">Produtos</a>
-        <a href="#">Contato</a>
+        <p>
+            <a href="#">Sobre</a>
+            <a href="#">Produtos</a>
+            <a href="#">Contato</a>
+        </p>
     </div>
 
-    <div class="secao-produtos">
+    <div class="secao-sobre">
         <h1>O melhor de nossos pães e bolos para você</h1>
 
-        <h2>Desde 2001, o lugar mais gostoso da cidade</h2>
+        <h2 class="sobre-destaque">Desde 2001, o lugar mais gostoso da cidade</h2>
 
         <img src="imagens/produtos-padaria.jpg" alt="Produtos da padaria">
     </div>
 
-    <div>
+    <div class="secao-produtos">
         <h3>Veja nossos prudtos abaixo</h3>
 
         <h4>Pães</h4>
@@ -39,7 +41,7 @@
         <img src="imagens/bolos.jpg" alt="Bolos">
     </div>
 
-    <div>
+    <div class="cecao-contato">
         <h4>Contato</h4>
 
         <p>Estamos localizados na Avenida Santos Agoz N° 456</p>
