--- a/DevMidia/exercicios/paradaria plus/index.html
+++ b/DevMidia/exercicios/paradaria plus/index.html
@@ -41,7 +41,7 @@
         <img src="imagens/bolos.jpg" alt="Bolos">
     </div>
 
-    <div class="cecao-contato">
+    <div class="secao-contato">
         <h4>Contato</h4>
 
         <p>Estamos localizados na Avenida Santos Agoz N° 456</p>
