inicio do css do projeto

--- a/DevMidia/Projetos/Imobiliária/index.html
+++ b/DevMidia/Projetos/Imobiliária/index.html
@@ -7,21 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="secao1">
         <img src="imagens/logo.png" alt="">
 
-        <a href="#">Sobre</a>
-
-        <a href="#">Serviços</a>
-
-        <a href="#">Corretores</a>
+        <p>
+            <a href="#">Sobre</a>
+            <a href="#">Serviços</a>
+            <a href="#">Corretores</a>
+            <a href="#">Contato</a>
+        </p>
     </div>
 
-    <div>
+    <div class="secao2">
         <img src="imagens/banner.jpg" alt="">
     </div>
 
-    <div>
+    <div class="secao3">
         <h2>Econtre o imóvel dos seus sonhos</h2>
 
         <h3>A imobiliária que te ajuda no sonho do seu imóvel</h3>
