--- a/DevMidia/Projetos/Imobiliária/index.html
+++ b/DevMidia/Projetos/Imobiliária/index.html
@@ -23,20 +23,20 @@
     </div>
 
     <div class="secao3">
-        <h2>Econtre o imóvel dos seus sonhos</h2>
+        <h1>Econtre o imóvel dos seus sonhos</h1>
 
-        <h3>A imobiliária que te ajuda no sonho do seu imóvel</h3>
+        <h2>A imobiliária que te ajuda no sonho do seu imóvel</h2>
 
         <img src="imagens/imovel-assinatura.jpg" alt="">
 
-        <p>Há <span>10 anos</span> no ramo temos conquistado a confiança de <span>inúmeros clientes</span>. Isso porque procuramos sempre as melhores condições tanto para quem quer comprar, como par quem quer vender ou alugar. Oferecemos um <span>serviço de qualidade</span> servindo como ponte entre as partes interessadas.</p>
+        <p>Há <span class="texto-azul">10 anos</span> no ramo temos conquistado a confiança de <span class="texto-azul">inúmeros clientes</span>. Isso porque procuramos sempre as melhores condições tanto para quem quer comprar, como par quem quer vender ou alugar. Oferecemos um <span class="texto-azul">serviço de qualidade</span> servindo como ponte entre as partes interessadas.</p>
 
     </div>
 
-    <div>
+    <div class="secao4">
         <h2>Serviços</h2>
 
-        <p>Contamos com diversos <span>serviços imobiliários</span> e também prestamos suport em cada uma das estapas necessárias de cada serviço. Aqui na <span>Imobiliária Santos</span> podemos te ajudar com a seguite gama de assuntos relativos a imóveis:</p>
+        <p>Contamos com diversos <span class="texto-amarelo">serviços imobiliários</span> e também prestamos suport em cada uma das estapas necessárias de cada serviço. Aqui na <span class="texto-amarelo">Imobiliária Santos</span> podemos te ajudar com a seguite gama de assuntos relativos a imóveis:</p>
 
         <ul>
             <li>Venda</li>
@@ -46,23 +46,27 @@
         </ul>
     </div>
 
-    <div>
-        <h2>Corretores</h2>
+    <div class="secao5">
+        <h2 class="texto-azul">Corretores</h2>
 
         <img src="imagens/corretores.jpg" alt="">
 
-        <p>A <span>imobiliária Santos</span> conta com um time de profissionais qualificados que têm vários anos de experiência no mercado. Para entrar em contato com um de nossos corretores, basta clicar no link a seguir: <a href="#">Corretores</a></p>
+        <p>A <span class="texto-azul">imobiliária Santos</span> conta com um time de profissionais qualificados que têm vários anos de experiência no mercado. Para entrar em contato com um de nossos corretores, basta clicar no link a seguir: <a href="#">Corretores</a></p>
     
     </div>
 
-    <div>
+    <div class="secao6">
         <h2>Contato</h2>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.1179277032497!2d-43.36895470321045!3d-22.982690599999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2c2293fa63%3A0x539cb07246f0e38d!2sVia%20Parque%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1689603256069!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        <p>Se ficou interessado em nos conhecer ou se tiver dúvidas entre em <span>contato</span> conosco atráves de um dos telefones abaixo:</p>
+        <p>Se ficou interessado em nos conhecer ou se tiver dúvidas entre em <span class="texto-amarelo">contato</span> conosco atráves de um dos telefones abaixo:</p>
 
-        <a href="tel:+">Escritório Barra da Tijuca</a>
+        <ul type="none">
+            <li><a href="tel:+">Escritório Barra da Tijuca</a></li>
+            <li><a href="tel:+">Escritório Centro/RJ</a></li>
+            <li><a href="tel:+">Escriório Méier</a></li>
+        </ul>
     </div>
 </body>
 </html>
