--- a/DevMidia/exercicios/superman e lois/index.html
+++ b/DevMidia/exercicios/superman e lois/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="topo">
-        <div>
+        <div class="teste">
             Superman & Lois
     
             <span>
