--- a/DevMidia/Projetos/Cafeteria/index.html
+++ b/DevMidia/Projetos/Cafeteria/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Lato&family=Oswald:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="topo">
+    <div class="topo">
         <img src="imagens/logo.png" alt="Logo Cafeteria">
 
         <div>
@@ -18,9 +18,9 @@
             <a href="#contatos">Contatos</a>
             <a href="#horario">Horários</a>
         </div>
-    </header>
+    </div>
 
-    <div class="banner">
+    <div class="container-parallax1" class="efeitoparallax">
         <h1>MANHATTAN - COFFEE HOUSE</h1>
     </div>
 
@@ -40,7 +40,7 @@
             todos nós, café é coisa séria e merece todo o cuidado.</p>
     </div>
 
-    <div class="">
+    <div class="container-parallax2">
 
         <h3>Um bom café é motivo de alegria!</h3>
     </div>
@@ -61,7 +61,7 @@
             café.</p>
     </div>
 
-    <div class="">
+    <div class="container-parallax3">
 
         <h3>A vida só começa depois do café!</h3>
     </div>
