--- a/DevMidia/Projetos/Cafeteria/index.html
+++ b/DevMidia/Projetos/Cafeteria/index.html
@@ -89,9 +89,11 @@
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.1168145530914!2d-43.36346792380448!3d-22.982731540591395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-003!5e0!3m2!1spt-BR!2sbr!4v1692795282797!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-        <p>Telefone & Whatsapp: <a href="tel:+552199999-5555" target="_blank">(21) 99999-5555</a></p>
-        <p>E-mail: <a href="mailto:contato@manhattan.com.br" target="_blank">contato@manhattan.com.br</a></p>
-        <p>Endereço: <a href="https://goo.gl/maps/TFnGX3FD8FFL6b2v6" target="_blank">Av Ayrton Senna, 3000 - Barra da Tijuca - Rio de Janeiro</a></p>
+        <div class="container-contatos">
+            <p>Telefone & Whatsapp: <a href="tel:+552199999-5555" target="_blank">(21) 99999-5555</a></p>
+            <p>E-mail: <a href="mailto:contato@manhattan.com.br" target="_blank">contato@manhattan.com.br</a></p>
+            <p>Endereço: <a href="https://goo.gl/maps/TFnGX3FD8FFL6b2v6" target="_blank">Av Ayrton Senna, 3000 - Barra da Tijuca - Rio de Janeiro</a></p>
+        </div>
     </div>
 
     <div class="horarios">
