--- a/CC50/hello.html
+++ b/CC50/hello.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello, title</title>
+    <title>css</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    hello, body
+<body class="centered">
+    <header class="large">John Harvard</header>
+    <main class="medium">Welcome to my home page!</main>
+    <footer class="small">Copyright &#169  John Harvard</footer>
 </body>
 </html>
