--- a/CC50/paragraphs.html
+++ b/CC50/paragraphs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <style>
 
         #harvard
@@ -81,5 +82,10 @@
      <img src="396723542_919942766307479_7478896914715030656_n.jpg" alt="Imagem de exemplo">
 
      Visite <a href="https://www.harvard.edu/" id="harvard">Visit Harvard</a> ou <a href="https://www.yale.edu" id="yale">Yale</a>
+
+     <form action="https://www.google.com.br/search" method="get">
+        <input type="q" type="search">
+        <input type="submit" value="Search">
+     </form>
 </body>
 </html>
