--- a/exercicios/ex027/flex006/index.html
+++ b/exercicios/ex027/flex006/index.html
@@ -6,18 +6,15 @@
     <title>Flexible Box</title>
     <style>
         div.conteiner {
-            background-color: lightsalmon; 
-            height: 400px;
+            background-color: lightsalmon;
             display: flex;
-            flex-flow: row wrap;
-            align-content: space-around;
         }
 
         div.item {
             background-color: lightblue;
             border: 1px solid black;
             text-align: center;
-            padding: 40px;
+            flex: auto;
         }
     </style>
 </head>
@@ -30,11 +27,6 @@
         <div class="item">E</div>
         <div class="item">F</div>
         <div class="item">G</div>
-        <div class="item">H</div>
-        <div class="item">I</div>
-        <div class="item">K</div>
-        <div class="item">L</div>
-        <div class="item">M</div>
     </div>
 </body>
 </html>
